--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Run backend tests
       run: |
         cd FastAPI-Database
-        python -m pytest tests/ -v
+        python -m pytest tests/ -v --tb=short
       env:
         DB_HOST: localhost
         DB_USER: root
@@ -66,7 +66,7 @@ jobs:
     - name: Run frontend tests
       run: |
         cd react-admin
-        npm test -- --watchAll=false --coverage
+        npm test -- --watchAll=false --coverage --passWithNoTests
 
   build-docker:
     runs-on: ubuntu-latest
@@ -95,19 +95,33 @@ jobs:
 
   security-scan:
     runs-on: ubuntu-latest
+    needs: [build-docker]
     
     steps:
     - uses: actions/checkout@v3
     
-    - name: Run Trivy vulnerability scanner
+    - name: Run Trivy vulnerability scanner on backend
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: 'buc-backend:latest'
+        image-ref: 'buc-backend:${{ github.sha }}'
         format: 'sarif'
-        output: 'trivy-results.sarif'
+        output: 'trivy-backend-results.sarif'
+    
+    - name: Run Trivy vulnerability scanner on frontend
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: 'buc-frontend:${{ github.sha }}'
+        format: 'sarif'
+        output: 'trivy-frontend-results.sarif'
     
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v2
       if: always()
       with:
-        sarif_file: 'trivy-results.sarif' 
+        sarif_file: 'trivy-backend-results.sarif'
+    
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      if: always()
+      with:
+        sarif_file: 'trivy-frontend-results.sarif' 
