--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd react-admin
-        npm ci
+        npm ci --legacy-peer-deps
     
     - name: Run frontend tests
       run: |
