--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Build backend image for scanning
+      run: |
+        cd FastAPI-Database
+        docker build -t buc-backend:${{ github.sha }} .
+    
+    - name: Build frontend image for scanning
+      run: |
+        cd react-admin
+        docker build -t buc-frontend:${{ github.sha }} .
+    
     - name: Run Trivy vulnerability scanner on backend
       uses: aquasecurity/trivy-action@master
       with:
@@ -115,13 +128,13 @@ jobs:
         output: 'trivy-frontend-results.sarif'
     
     - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
+      uses: github/codeql-action/upload-sarif@v3
+      if: always() && hashFiles('trivy-backend-results.sarif') != ''
       with:
         sarif_file: 'trivy-backend-results.sarif'
     
     - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
+      uses: github/codeql-action/upload-sarif@v3
+      if: always() && hashFiles('trivy-frontend-results.sarif') != ''
       with:
         sarif_file: 'trivy-frontend-results.sarif' 
