--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,9 +132,11 @@ jobs:
       if: always() && hashFiles('trivy-backend-results.sarif') != ''
       with:
         sarif_file: 'trivy-backend-results.sarif'
+        category: 'backend-vulnerabilities'
     
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
       if: always() && hashFiles('trivy-frontend-results.sarif') != ''
       with:
-        sarif_file: 'trivy-frontend-results.sarif' 
+        sarif_file: 'trivy-frontend-results.sarif'
+        category: 'frontend-vulnerabilities' 
